- colors adapted according to Leylas input

--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -119,13 +119,13 @@ body {
           body.segment_wm & {
             color: @pxl-color-hso-wm;
           }
-          body.segment_wm.category_hf & {
+          body.category_hf & {
             color: @pxl-color-hso-hf;
           }
-          body.segment_wm.category_fh & {
+          body.category_fh & {
             color: @pxl-color-hso-fh;
           }
-          body.segment_wm.category_ex & {
+          body.category_ex & {
             color: @pxl-color-hso-ex;
           }
         }
