--- a/all/themes/pixelgarage/less/pxlComponents/node-course.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-course.less
@@ -164,13 +164,13 @@
           body.segment_wm & {
             color: @pxl-color-hso-wm;
           }
-          body.segment_wm.category_hf & {
+          body.category_hf & {
             color: @pxl-color-hso-hf;
           }
-          body.segment_wm.category_fh & {
+          body.category_fh & {
             color: @pxl-color-hso-fh;
           }
-          body.segment_wm.category_ex & {
+          body.category_ex & {
             color: @pxl-color-hso-ex;
           }
         }
@@ -270,13 +270,13 @@
         body.segment_wm & {
           .links(@pxl-color-hso-wm);
         }
-        body.segment_wm.category_hf & {
+        body.category_hf & {
           .links(@pxl-color-hso-hf);
         }
-        body.segment_wm.category_fh & {
+        body.category_fh & {
           .links(@pxl-color-hso-fh);
         }
-        body.segment_wm.category_ex & {
+        body.category_ex & {
           .links(@pxl-color-hso-ex);
         }
       }
