--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -173,13 +173,13 @@ form.webform-client-form {
   body.segment_wm & {
     .links(@pxl-color-hso-wm);
   }
-  body.segment_wm.category_hf & {
+  body.category_hf & {
     .links(@pxl-color-hso-hf);
   }
-  body.segment_wm.category_fh & {
+  body.category_fh & {
     .links(@pxl-color-hso-fh);
   }
-  body.segment_wm.category_ex & {
+  body.category_ex & {
     .links(@pxl-color-hso-ex);
   }
 
@@ -349,15 +349,15 @@ form.webform-client-form {
         border: 1px solid @pxl-color-hso-wm;
         .box-shadow(inset 0 0 3px @pxl-color-hso-wm);
       }
-      body.segment_wm.category_hf & {
+      body.category_hf & {
         border: 1px solid @pxl-color-hso-hf;
         .box-shadow(inset 0 0 3px @pxl-color-hso-hf);
       }
-      body.segment_wm.category_fh & {
+      body.category_fh & {
         border: 1px solid @pxl-color-hso-fh;
         .box-shadow(inset 0 0 3px @pxl-color-hso-fh);
       }
-      body.segment_wm.category_ex & {
+      body.category_ex & {
         border: 1px solid @pxl-color-hso-ex;
         .box-shadow(inset 0 0 3px @pxl-color-hso-ex);
       }
@@ -410,13 +410,13 @@ form.webform-client-form {
         body.segment_wm & {
           border: 1px solid @pxl-color-hso-wm;
         }
-        body.segment_wm.category_hf & {
+        body.category_hf & {
           border: 1px solid @pxl-color-hso-hf;
         }
-        body.segment_wm.category_fh & {
+        body.category_fh & {
           border: 1px solid @pxl-color-hso-fh;
         }
-        body.segment_wm.category_ex & {
+        body.category_ex & {
           border: 1px solid @pxl-color-hso-ex;
         }
       }
@@ -624,13 +624,13 @@ form.webform-client-form {
       body.segment_wm & {
         .resp-submit-button(#fff, @pxl-color-hso-wm);
       }
-      body.segment_wm.category_hf & {
+      body.category_hf & {
         .resp-submit-button(#fff, @pxl-color-hso-hf);
       }
-      body.segment_wm.category_fh & {
+      body.category_fh & {
         .resp-submit-button(#fff, @pxl-color-hso-fh);
       }
-      body.segment_wm.category_ex & {
+      body.category_ex & {
         .resp-submit-button(#fff, @pxl-color-hso-ex);
       }
     }
