--- a/all/themes/pixelgarage/less/pxlComponents/view-contacts.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-contacts.less
@@ -174,13 +174,13 @@
             body.segment_wm & {
               .segment-color(@pxl-color-hso-wm);
             }
-            body.segment_wm.category_hf & {
+            body.category_hf & {
               .segment-color(@pxl-color-hso-hf);
             }
-            body.segment_wm.category_fh & {
+            body.category_fh & {
               .segment-color(@pxl-color-hso-fh);
             }
-            body.segment_wm.category_ex & {
+            body.category_ex & {
               .segment-color(@pxl-color-hso-ex);
             }
 
