--- a/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
@@ -216,13 +216,13 @@
                 body.segment_wm & {
                   border: 1px solid @pxl-color-hso-wm;
                 }
-                body.segment_wm.category_hf & {
+                body.category_hf & {
                   border: 1px solid @pxl-color-hso-hf;
                 }
-                body.segment_wm.category_fh & {
+                body.category_fh & {
                   border: 1px solid @pxl-color-hso-fh;
                 }
-                body.segment_wm.category_ex & {
+                body.category_ex & {
                   border: 1px solid @pxl-color-hso-ex;
                 }
               }
