--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -96,7 +96,8 @@
           body.segment_hs &:hover {
             background-color: @pxl-color-hso-hs;
           }
-          body.segment_wm & {
+          body.segment_wm &,
+          body.segment_wi & {
             &:hover {
               background-color: @pxl-color-hso-wm;
             }
@@ -112,9 +113,6 @@
           }
           body.segment_sp &:hover {
             background-color: @pxl-color-hso-sp;
-          }
-          body.segment_wi &:hover {
-            background-color: @pxl-color-hso-wi;
           }
           body.segment_pp &:hover {
             background-color: @pxl-color-hso-pp;
