--- a/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
@@ -58,13 +58,13 @@
       body.segment_wm & {
         .links(@pxl-color-hso-wm);
       }
-      body.segment_wm.category_hf & {
+      body.category_hf & {
         .links(@pxl-color-hso-hf);
       }
-      body.segment_wm.category_fh & {
+      body.category_fh & {
         .links(@pxl-color-hso-fh);
       }
-      body.segment_wm.category_ex & {
+      body.category_ex & {
         .links(@pxl-color-hso-ex);
       }
     }
