--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -14,7 +14,7 @@
 @pxl-color-hso-wm: #7C0B25; //rgb(124, 11, 37);
 @pxl-color-hso-sp: #7BA4B6; //rgb(123, 164, 182);
 @pxl-color-hso-sp-2: #B2CCD8; //rgb(178, 204, 216);
-@pxl-color-hso-wi: #335592; //rgb(51, 85, 146);
+@pxl-color-hso-wi: #7C0B25; //rgb(124, 11, 37);
 @pxl-color-hso-pp: #408C8B; //rgb(64, 140, 139);
 @pxl-color-hso-hf: #335592; //rgb(51, 85, 146);
 @pxl-color-hso-fh: #3f5868; //rgb(63, 88, 104);
