--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -13196,7 +13196,10 @@ body.category_ex .node.node-course .row .col-sm-3 .field-name-course-links .fiel
 body.category_ex .node.node-course .row .col-sm-3 .field-name-course-links .field-item ul.menu li.active span {
   color: #7B6C65;
 }
-.node.node-course .row .col-sm-3.course-has-no-info-event .field-name-course-links .field-item ul.menu li.infoevent {
+body.course-has-no-info-event .node.node-course .row .col-sm-3 .field-name-course-links .field-item ul.menu li.infoevent {
+  display: none;
+}
+body.course-has-no-start-data .node.node-course .row .col-sm-3 .field-name-course-links .field-item ul.menu li.startdaten {
   display: none;
 }
 .node.node-course .row .col-sm-3 .field-name-course-benefits {
