--- a/all/themes/pixelgarage/less/mixins/text.less
+++ b/all/themes/pixelgarage/less/mixins/text.less
@@ -114,6 +114,10 @@
       .font-size-responsive(@text-size);
     }
 
+    table {
+      width: 100% !important;
+    }
+
     table, tr, th, td {
       border-color: @pxl-border-color;
 
