--- a/all/themes/pixelgarage/less/pxlComponents/node-course.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-course.less
@@ -217,6 +217,12 @@
                 font-size: @font-size-small;
                 color: @text-color;
                 vertical-align: top;
+
+                img {
+                  width: 100% !important;
+                  height: auto !important;
+                  max-width: 100%;
+                }
               }
               td {
                 font-family: @pxl-text-font-light;
